src/index.css
:root {
  --blue: #0078d4;
  --blue-d: #106ebe;
  --silver: #f3f2f1;
  --coal: #323130;
  --coal-l: #605e5c;
  --success: #107c10;
}

* {
  box-sizing: border-box;
  font-family: inherit;
}

html,
body {
  margin: 0;
  height: 100%;
  color: var(--coal);
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
}

body {
  background-color: var(--silver);
}

[data-js-focus-visible] :focus:not([data-focus-visible-added]) {
  outline: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}

ul,
ol {
  margin: 0;
  padding: 0;
}

.btn {
  cursor: pointer;
  height: 32px;
  color: var(--btn-color, var(--coal));
  background-color: var(--btn-background-color, white);
  border: none;
  border-radius: 4px;
  padding: 0 16px;
  font-weight: 600;
  font-size: 14px;
  transition: background-color 250ms;
}

.btn:hover {
  background-color: var(--btn-background-color-hover, var(--silver));
}

.btn--primary {
  --btn-color: white;
  --btn-background-color: var(--blue);
  --btn-background-color-hover: var(--blue-d);
}

.btn--w120 {
  width: 120px;
}

.input {
  height: 32px;
  background-color: var(--input-background-color, white);
  border: 1px solid var(--input-border-color, var(--coal-l));
  border-radius: 4px;
  padding: 0 8px;
  font-size: 14px;
}

.input:hover {
  background-color: var(--input-background-color-hover, white);
}

